added name to the ipynb file

--- a/M9_Final_Assignment.ipynb
+++ b/M9_Final_Assignment.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -16,7 +17,7 @@
    },
    "source": [
     "# Codio Coding Assignment 9.1: GitHub and Advanced Python Functions\n",
-    "\n",
+    "## Haryoon Jang\n",
     "### Learning Outcomes Addressed\n",
     "\n",
     "- 2. Use GitHub for version control.\n",
@@ -43,6 +44,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -121,6 +123,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -194,6 +197,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -270,6 +274,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -346,6 +351,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -428,6 +434,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -507,6 +514,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -585,6 +593,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -672,6 +681,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -760,6 +770,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -841,6 +852,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -921,6 +933,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -1023,6 +1036,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
